[package]
name = "tiny-json-rs"
version = "0.2.1"
edition = "2021"

description = "tiny-json-rs is a simple and lightweight JSON parser for Rust."
authors = ["Edson Holanda"]
repository = "https://github.com/EdsonHTJ/tiny-json-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_json_derive = {path = "tiny_json_derive", version = "0.1.1" }

