[package]
name = "tiny-json-rs"
version = "0.2.5"
edition = "2021"

description = "tiny-json-rs is a simple and lightweight JSON parser for Rust."
categories = ["encoding", "no-std", "parsing"]
keywords = ["json", "parser", "no-std", "parsing", "encoding"]
authors = ["Edson Holanda"]
repository = "https://github.com/EdsonHTJ/tiny-json-rs"
license = "MIT"

[dependencies]
tiny_json_derive = {path = "tiny_json_derive", version = "0.1.2" }

