[package]
name = "tiny_json_derive"
version = "0.1.0"
description = "tiny-json-rs derive crate"
authors = ["Edson Holanda"]
edition = "2021"
repository = "https://github.com/EdsonHTJ/tiny-json-rs"
license = "MIT"
license-file = "LICENSE"
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"